--- a/recommended/assets/style.css
+++ b/recommended/assets/style.css
@@ -92,24 +92,11 @@ body{
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.indexPic{
+#indexPic{
     height:270px;
     width:200px;
     float:left;
-    margin: 20 30 0 0;
-}
-
-footer{
-    background-color:#666666;
-    border-top-style: solid;
-    border-top-color:#4aaaa5;
-    border-top-width:8px;
-    width:100%;
-    position:fixed;
-    left:0%;
-    bottom:0%;
-    height:100px;
-    z-index:2;
+    margin: 20px 30px 0px 0px;
 }
 
 .inputBox1{
@@ -117,7 +104,8 @@ width:100%;
 }
 
 .inputBox2{
-
+width:100%;
+height:400px;
 }
 
 #submitbutton{
@@ -149,4 +137,17 @@ width:100%;
     bottom: 20px;
     z-index:1;
     text-align: center;
+}
+
+.footer{
+    background-color:#666666;
+    border-top-style: solid;
+    border-top-color:#4aaaa5;
+    border-top-width:8px;
+    width:100%;
+    position:fixed;
+    left:0%;
+    bottom:0%;
+    height:100px;
+    z-index:2;
 }
